--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -2,9 +2,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: white;
 }
 
-.main {
-  flex: 1;
-  padding: 2rem 0;
-} 
+ 
