--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,4 @@
-.main-content {
+/* .main-content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +8,7 @@
   text-align: center;
   z-index: 1;
   overflow: hidden;
-}
+} */
 
 .background-video {
   position: absolute;
