--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -58,7 +58,7 @@
   z-index: 1001;
 }
 
-.logo {
+.logo1 {
   font-size: 2rem;
   font-weight: 700;
   background: linear-gradient(135deg, var(--primary-color), var(--primary-light));
@@ -68,10 +68,14 @@
   text-decoration: none;
   position: relative;
   transition: var(--transition-smooth);
-  letter-spacing: -0.5px;
+  letter-spacing:  -0.5px;
+
+ display: inline-block;
+  
+  
 }
 
-.logo::after {
+.logo1::after {
   content: '';
   position: absolute;
   bottom: -4px;
@@ -83,11 +87,11 @@
   transition: var(--transition-bounce);
 }
 
-.logo:hover::after {
+.logo1:hover::after {
   width: 100%;
 }
 
-.logo:hover {
+.logo1:hover {
   transform: translateY(-1px);
 }
 
@@ -401,6 +405,18 @@
     padding: 0.75rem 1.5rem;
     font-size: 0.9rem;
   }
+  .header-user-container {
+    padding: 0.875rem 1rem;
+    width: 100%;
+    height: 50px;
+  }
+  .header-user{
+    margin-top: 5px;
+    width: 100%;
+    height: 60px;
+
+  }
+
 }
 
 @media (max-width: 768px) {
@@ -423,11 +439,23 @@
   .logo {
     font-size: 1.75rem;
   }
+  .header-user-container {
+    padding: 0.875rem 1rem;
+    width: 100%;
+    height: 50px;
+  }
+  .header-user{
+    margin-top: 5px;
+    width: 100%;
+    height: 60px;
+
+  }
 }
 
 @media (max-width: 480px) {
   .mobile-nav {
     width: 100%;
+     
   }
   
   .logo {
@@ -436,6 +464,14 @@
   
   .header-user-container {
     padding: 0.875rem 1rem;
+    width: 100%;
+    height: 50px;
+  }
+  .header-user{
+    margin-top: 5px;
+    width: 100%;
+    height: 60px;
+
   }
 }
 
